Fix missed dark mode style, adjust dark mode focus outline colour

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -81,7 +81,7 @@ html {
 
     --modal-screen: rgba(64, 64, 64, 0.5);
 
-    --focus-border: #005fcc;
+    --focus-border: #5599ff;
     --focus-border-heart: #dd4422;
 
     --beige-back: hsl(30, 3%, 17%);
